<resources>
    <string name="app_name">Dinner With Friends</string>
    <string name="title_home">Znajomi</string>
    <string name="title_dashboard">Konwersacje</string>
    <string name="title_notifications">Skojarzeni</string>
    <string name="title_chat">Chat</string>
    <string name="title_main">Główna</string>
    <string name="title_match">Parowanie</string>

    !-- login screen--
    <string name="password">Hasło</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="login">Zaloguj</string>
    <string name="sign_in">* Rejestracja</string>
    !-- nie wiem co to --
    <string name="title_activity_login">CheckIT</string>
    <string name="title_activity_sign_in">sign_in</string>
    !-- sign in activity--
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="phone">Telefon</string>
    <string name="country">Kraj</string>
    <string name="province">Województwo</string>
    <string name="mail">e-mail</string>
    <string name="first_pass">Wprowadź hasło</string>
    <string name="second_pass">powtórz hasło</string>
    <string name="create_account">załóż konto</string>
    <string name="title_activity_chatting">ChattingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registration">Rejestracja</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="title_activity_matched">MatchedActivity</string>
    <string name="title_activity_match">MatchActivity</string>


</resources>
