<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_jpg"
   >

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="200dp"
        android:layout_height="165dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editText_username"
        android:paddingLeft="5dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@id/imageView_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textPersonName"
        android:textSize="16sp"
        />
    <!-- android:background="#11000000"-->
    <EditText
        android:id="@+id/editText_pass"
        android:paddingLeft="5dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@id/editText_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"

        android:drawableLeft="@drawable/ic_action_pass"/>




    <android.support.v7.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/editText_pass"
        android:minHeight="50dp"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="#fb2525"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        >

        <RelativeLayout
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/CardView"
            android:layout_alignLeft="@+id/CardView"
            >

            <TextView
                android:id="@+id/textView_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>



</RelativeLayout>