<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainConstraintLayout"
    android:background="@drawable/black_background_small_long">

    <!-- <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_string" /> -->


    <TextView
        android:id="@+id/textView_top_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/registration"
        android:textSize="35sp"
        android:textColor="#ffffff"

        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="139dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:minHeight="50dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="3dp"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/CardView"
            android:layout_alignLeft="@+id/CardView">

            <TextView
                android:id="@+id/textView_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/create_account"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView_register"
        app:layout_constraintEnd_toStartOf="@id/cardView_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/scrollConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="158dp" />


            <EditText
                android:id="@+id/editText_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/mail"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/surname"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/editText_mail" />

            <EditText
                android:id="@+id/editText_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/first_pass"
                android:inputType="textPassword"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/editText_phone" />

            <EditText
                android:id="@+id/editText_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/second_pass"
                android:inputType="textPassword"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/editText_pass" />

            <TextView
                android:id="@+id/textView_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/phone"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/editText_phone" />


            <TextView
                android:id="@+id/textView_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/mail"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintBottom_toBottomOf="@+id/editText_mail"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/editText_mail" />

            <TextView
                android:id="@+id/textView_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/first_pass"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintBottom_toBottomOf="@+id/editText_pass"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/editText_pass" />

            <TextView
                android:id="@+id/textView_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/second_pass"
                android:textSize="17sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintBottom_toBottomOf="@+id/editText_confirm_password"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/editText_confirm_password" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>